@@ -1,3 +1,11 @@
+2007-04-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/Makefile (routines): Add sched_cpucount.
+	(tests): Add tst-cpucount.
+	* posix/sched_cpucount.c: New file.
+	* posix/tst-cpucount.c: New file.
+	* posix/Versions: Export __sched_cpucount with version GLIBC_2.6.
+
 2007-03-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* posix/fnmatch.c (STRUCT): Define.
